<resources>
    <string name="app_name">Health Analyzers</string>
    <string name="title_home">首页</string>
    <string name="title_report">报告</string>
    <string name="title_knowledge">知识</string>
    <string name="title_mine">我</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_input_again">再次输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_register_short">注册</string>
    <string name="welcome">"欢迎!"</string>
    <string name="invalid_username">无效用户名</string>
    <string name="invalid_password">密码长度至少 6 位</string>
    <string name="login_failed">"登录失败"</string>
    <string name="remember_password">记住密码</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="other_login_methods">其他登录方式</string>
    <string name="comply_protocol">我自愿遵守使用相关程序的</string>
    <string name="protocol">《协议》</string>
    <string name="retrieve">找回</string>
    <string name="retrieve_password">找回密码</string>
    <string name="heart_rate">心率</string>
    <string name="body_fat">体脂</string>
    <string name="height">身高</string>
    <string name="sleep_quality">睡眠质量</string>
    <string name="oxygen_blood">血氧量</string>
    <string name="alter_username">修改用户名</string>
    <string name="alter_sex">修改性别</string>
    <string name="alter_nickname">修改昵称</string>
    <string name="alter_age">修改年龄</string>
    <string name="alter_weight">修改体重</string>
    <string name="alter_high">修改身高</string>
    <string name="analyzers">检测</string>
    <string name="save">保存</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="high">身高</string>
    <string name="weight">体重</string>
    <string name="age">年龄</string>
    <string name="manage_devices">管理设备</string>
    <string name="add_by_hand">手动添加</string>
    <string name="scan">扫一扫</string>
    <string name="logout">注销</string>
    <string name="alter_password">修改密码</string>
    <string name="make_sure_logout">确认注销</string>
    <string name="cancel">取消</string>
    <string name="input_new_password_again">再次输入新密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="make_sure">确认</string>
    <string name="heart_rate_device">心率仪</string>
    <string name="wristband">手环</string>
    <string name="thermometer">温度计</string>
    <string name="body_fat_scale">体脂秤</string>
    <string name="oximeter">血氧仪</string>
    <string name="sphygmomanometer">血压计</string>
    <string name="blood_glucose_meter">血糖仪</string>
    <string name="height_meter">身高测定仪</string>
    <string name="weekly">周报</string>
    <string name="monthly">月报</string>
    <string name="yearly">年报</string>
    <string name="daily">日报</string>
    <string name="addDevices">添加设备</string>
    <string name="watch">手表/环</string>
    <string name="bloodGlucoseMeter">血糖仪</string>
    <string name="body_weight_device">称</string>
    <string name="summary_report">总结报告</string>
    <string name="give_advices">给出建议</string>
    <string name="password_at_least_six">密码（至少6位）</string>

</resources>