<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/actionbar_color"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/image_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/actionbar_color"
            android:src="@drawable/ic_back_24dp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/manage_devices"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            tools:listitem="@layout/device_item" />

    </androidx.cardview.widget.CardView>

    <com.nambimobile.widgets.efab.ExpandableFabLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nambimobile.widgets.efab.ExpandableFab
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:efab_color="@color/actionbar_color" />

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addHeightMeter"
            app:fab_color="@color/Indigo"
            app:fab_icon="@drawable/ic_high_24dp"
            app:label_text="@string/height_meter" />

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addWatch"
            app:fab_color="@color/Indigo"
            app:fab_icon="@drawable/ic_watch_24dp"
            app:label_text="@string/watch" />

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addThermometer"
            app:fab_color="@color/Indigo"
            app:fab_icon="@drawable/ic_thermometer_24dp"
            app:label_text="@string/thermometer" />

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addHeartRateDevice"
            app:fab_color="@color/Indigo"
            app:fab_icon="@drawable/ic_heart_rate_24dp"
            app:label_text="@string/heart_rate_device" />

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addOximeter"
            app:fab_color="@color/Indigo"
            app:fab_icon="@drawable/ic_blood_oxygen_24dp"
            app:label_text="@string/oximeter" />

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addSphygmomanometer"
            app:fab_color="@color/Indigo"
            app:fab_icon="@drawable/ic_blood_pressure_24dp"
            app:label_text="@string/sphygmomanometer" />

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addBloodGlucoseMeter"
            app:fab_color="@color/Indigo"
            app:fab_icon="@drawable/ic_blood_suger_24dp"
            app:label_text="@string/bloodGlucoseMeter" />

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addBodyFatScale"
            app:fab_color="@color/Indigo"
            app:fab_icon="@drawable/ic_weight_24dp"
            app:label_text="@string/body_fat_scale"
            app:label_textColor="@color/white" />

    </com.nambimobile.widgets.efab.ExpandableFabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>